Fixed: wflow-consoleweb - DX 8 Theme - There is no space in between menu label & count badge when the label is too long. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview8.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview8.css
@@ -405,6 +405,7 @@ body.rtl:not(.horizontal_menu) #sidebar .nav > li > ul > li > a{
 }
 #sidebar .nav > li > ul > li > a > span:first-child {
     max-width: 160px;
+    padding-right: 10px;
     display: inline-block;
 }
 body.rtl:not(.horizontal_menu) #sidebar .nav > li > ul > li > a > span:first-child{
